<resources>
    <string name="app_name">SmartFarm</string>
    <string name="hello_blank_fragment">Hello World</string>
    <string name="cuaca">Weather</string>
    <string name="tanaman">Plant</string>
    <string name="profile">Profile</string>
    <string name="format_email">Incorrect email format.</string>
    <string name="minimal_pw">Minimum password is 8 characters.</string>
    <string name="contoh_gmail_com">example@gmail.com</string>
    <string name="username">Username</string>
    <string name="farmer_icon">Farmer Icon</string>
    <string name="logout_berhasil">Logout Success!</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="please_login">Please login with your registered account</string>
    <string name="password">Password</string>
    <string name="tampilkan_password">Show the Password</string>
    <string name="login">Login</string>
    <string name="tv_question">Doesn\'t have an account?</string>
    <string name="daftar">Sign Up</string>
    <string name="sign_up">Sign Up</string>
    <string name="create_account">Create your new account</string>
    <string name="tv_question2">Already have an account?</string>
    <string name="splash_logo" translatable="false">Splash Logo</string>
    <string name="smartfarm" translatable="false">SmartFarm</string>
    <string name="si_sahabat_petani">Farmer\'s Friend</string>
    <string name="let_s_start">Let\'s Start</string>

    <string name="nama_daerah" translatable="false">Province</string>
    <string name="temperatur" translatable="false">-°</string>
    <string name="kondisi_cuaca" translatable="false">Conditions</string>
    <string name="waktu_dan_temperatur" translatable="false">Kam 33° / 25°</string>
    <string name="kualitas_udara" translatable="false">Air Quality</string>
    <string name="suhu_besok" translatable="false">Suhu Besok Terasa Seperti</string>
    <string name="kelembapan_suhu" translatable="false">Kelembapan membuat suhu tinggi terasa seperti 104°F</string>
    <string name="rincian_cuaca" translatable="false">Rincian Cuaca</string>
    <string name="rincian_suhu1" translatable="false">Terasa seperti</string>
    <string name="rincian_suhu2" translatable="false">31°</string>
    <string name="rincian_angin1" translatable="false">Angin U</string>
    <string name="rincian_angin2" translatable="false">14 km/j</string>
    <string name="rincian_kelembapan1" translatable="false">Kelembapan</string>
    <string name="rincian_kelembapan2" translatable="false">82%</string>
    <string name="rincian_uv1" translatable="false">UV</string>
    <string name="rincian_uv2" translatable="false">6 Sedang</string>
    <string name="rincian_visibiltas1" translatable="false">Visibilitas</string>
    <string name="rincian_visibiltas2" translatable="false">14 km</string>
    <string name="rincian_tekanan_udara1" translatable="false">Tekanan udara</string>
    <string name="rincian_tekanan_udara2" translatable="false">1006 hPa</string>
    <string name="cloudy">Cloudy</string>
    <string name="Thunderstorm">Thunderstorm</string>
    <string name="light_rain">Light Rain</string>
    <string name="rain_thunderstorm">Rain Thunderstorm</string>
    <string name="partly_cloudy">Partly Cloudy</string>
    <string name="sunny">Sunny</string>
    <string name="Hazy">Hazy</string>
    <string name="logout">Logout</string>
    <string name="change_language">Change Language</string>
    <string name="notifications">Notifications</string>
    <string name="air_quality_text">Air Quality: %1$d (%2$s)</string>
    <string name="weather_message_cloudy">Cloudy skies, perhaps a good time to garden in the shade!</string>
    <string name="weather_message_thunderstorm">Be careful, there’s a thunderstorm. Stay indoors and stay safe!</string>
    <string name="weather_message_light_rain">Light rain, make sure your plants don’t get too wet!</string>
    <string name="weather_message_rain_thunderstorm">Bad weather with thunderstorms. Don’t forget to stay safe!</string>
    <string name="weather_message_partly_cloudy">Partly cloudy, perfect weather for outdoor activities!</string>
    <string name="weather_message_sunny">Yay! Sunny weather, perfect for gardening in the park!</string>
    <string name="weather_message_hazy">Hazy skies, make sure to maintain your health while outdoors.</string>
    <string name="weather_message_unknown">Unknown weather, always check the surroundings before engaging in activities!</string>
    <string name="weather_desc_cloudy">cloudy</string>
    <string name="weather_desc_thunderstorm">thunderstorm</string>
    <string name="weather_desc_light_rain">light rain</string>
    <string name="weather_desc_rain_thunderstorm">rain thunderstorm</string>
    <string name="weather_desc_partly_cloudy">partly cloudy</string>
    <string name="weather_desc_sunny">sunny</string>
    <string name="weather_desc_hazy">hazy</string>
    <string name="weather_desc_unknown">unknown</string>
    <string name="air_quality_good">Good</string>
    <string name="air_quality_moderate">Moderate</string>
    <string name="air_quality_unhealthy_sensitive">Unhealthy for Sensitive Groups</string>
    <string name="air_quality_unhealthy">Unhealthy</string>
    <string name="air_quality_very_unhealthy">Very Unhealthy</string>
    <string name="air_quality_hazardous">Hazardous</string>
    <string name="tvhourly_forecast">Hourly Forecast</string>
    <string name="tvdaily_forecast">Daily Forecast</string>
    <string name="btn_settings">Settings</string>
    <string name="btn_logout">Logout</string>
    <string name="time_set">Set Time Reminder</string>
    <string name="set_pengingat">Set Reminder</string>
    <string name="add_plant">Add a Plant</string>
    <string name="plant_name">Plant Name</string>
    <string name="plant_category">Plant Category</string>
    <string name="plant_desc">Plant Description</string>
    <string name="planting_date">Planting Date</string>
    <string name="choose_planting_date">Choose Planting Date</string>
    <string name="save">Save</string>
    <string name="are_you_a_new_farmer">Are You a New Farmer??</string>
    <string name="yes_i_m">Yes i\'m</string>
    <string name="no">No</string>
    <string name="monitor_your_plants">Monitor Your Plants</string>
    <string name="broadcast">Broadcast</string>
    <string name="be_careful">Be careful! The next 3 days will be summer.</string>
    <string name="some_articles">Some Articles for You</string>
    <string name="btn_update">Update</string>
    <string name="btn_delete">Delete</string>
    <string name="btn_article">Open the Article</string>
    <string name="close">Close</string>
    <string name="short_description">Short description</string>
    <string name="desc">Are you having trouble taking care of your plants? Maybe Gemini has a solution to your plant problems. Let\'s ask!</string>
    <string name="btn_gemini">Ask Gemini</string>
    <string name="weather_message_moderate_rain">Moderate rain, prepare an umbrella or raincoat!</string>
    <string name="btnedit_profile">Edit Profile</string>


    <!-- Array Kategori Tanaman -->
    <string-array name="category_array">
        <item>Decorative plants</item>
        <item>Medicinal plants</item>
        <item>Fruit plants</item>
        <item>Vegetable plants</item>
        <item>Fern plant</item>
        <item>Rare plants</item>
    </string-array>
</resources>
