<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ImageView
        android:id="@+id/img_onboard_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/onboard_image"
        android:scaleType="centerCrop" />

    <ImageView
        android:id="@+id/img_opacity"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/opacity"
        android:scaleType="centerCrop"
        android:visibility="visible" />

    <TextView
        android:id="@+id/tv_teks1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/smartfarm"
        android:textSize="40sp"
        android:fontFamily="@font/exo2_semibold"
        android:textColor="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="32dp"
        android:layout_marginTop="70dp" />

    <TextView
        android:id="@+id/tv_teks2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/si_sahabat_petani"
        android:textSize="16sp"
        android:fontFamily="@font/poppins_medium"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/tv_teks1"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="32dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_to_login"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="24dp"
        android:text="@string/login"
        android:textColor="@color/black"
        android:backgroundTint="@color/gainsboro"
        android:textSize="16sp"
        app:cornerRadius="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_to_register"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="24dp"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:backgroundTint="@color/orange"
        android:textSize="16sp"
        app:cornerRadius="12dp"
        app:layout_constraintBottom_toTopOf="@id/btn_to_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
